[mobile] feat:  initial version
